Added homepage to slot

--- a/views/layouts/home.ejs
+++ b/views/layouts/home.ejs
@@ -2,8 +2,6 @@
 
 <%- include('../components/header.ejs'); %>
 
-<%- content %>
-<%- video %>
-<%- splitblock %>
+<%- homepage %>
 
 <%- include('../components/footer.ejs'); %>
