--- a/cms/templates/split-block.hbs
+++ b/cms/templates/split-block.hbs
@@ -1,8 +1,9 @@
 <div class="amp-split-block-wrapper">
-    <div class="amp-split-block" style="padding-top: 50%;">
+    <!-- <div class="amp-split-block" style="padding-top: 50%;"> -->
+        <div class="amp-split-block">
         <div class="amp-split-block__wrapper">
-            <div class="amp-split-block__image-container" style="padding-top: 50%;">
-
+            <!-- <div class="amp-split-block__image-container" style="padding-top: 50%;"> -->
+            <div class="amp-split-block__image-container">
                 <img class="amp-split-block__image"
                          src="http://{{blockContent.image.defaultHost}}/i/{{blockContent.image.endpoint}}/{{blockContent.image.name}}" alt="">
 
